<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Lottery App</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up Now</string>
    <string name="play_screen">Play Screen</string>
    <string name="sign_page">Sign Up Page</string>
    <string name="number_screen">Number Picking Screen</string>
    <string name="settings_screen">Account settings page</string>
    <string name="action_settings">Settings</string>
</resources>
